--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,20 +13,39 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: gradle
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
-      - name: Build and Publish with Gradle
+
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build -x test --stacktrace --no-daemon
+
+      - name: Publish to latvian.dev Maven
         uses: gradle/gradle-build-action@v2
         env:
+          MAVEN_URL: 'https://maven.latvian.dev/releases'
+          MAVEN_USERNAME: 'lat'
           MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
-          SAPS_TOKEN: ${{ secrets.SAPS_TOKEN }}
         with:
-          arguments: build -x test publish --stacktrace --no-daemon
+          arguments: publish --stacktrace --no-daemon
+
+      - name: Publish to saps.dev Maven
+        uses: gradle/gradle-build-action@v2
+        env:
+          MAVEN_URL: 'https://maven.saps.dev/releases'
+          MAVEN_USERNAME: 'latvian'
+          MAVEN_TOKEN: ${{ secrets.SAPS_TOKEN }}
+        with:
+          arguments: publish --stacktrace --no-daemon
