--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
       !contains(github.event.head_commit.message, '[ci skip]')
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
@@ -24,28 +24,25 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
-
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         with:
-          arguments: build -x test --stacktrace --no-daemon
+          arguments: build -x test --stacktrace
 
       - name: Publish to latvian.dev Maven
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         env:
           MAVEN_URL: 'https://maven.latvian.dev/releases'
           MAVEN_USERNAME: 'lat'
           MAVEN_TOKEN: ${{ secrets.MAVEN_TOKEN }}
         with:
-          arguments: publish --stacktrace --no-daemon
+          arguments: publish --stacktrace
 
       - name: Publish to saps.dev Maven
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         env:
           MAVEN_URL: 'https://maven.saps.dev/releases'
           MAVEN_USERNAME: 'latvian'
           MAVEN_TOKEN: ${{ secrets.SAPS_TOKEN }}
         with:
-          arguments: publish --stacktrace --no-daemon
+          arguments: publish --stacktrace
